syntax = "proto3";

package pb;

import "usertype.proto";

// 管理员
message Admin {
    uint32 id = 1;
    bool enable = 2;
    string email = 3;
    string password = 4;
    // 真实姓名
    string name = 5;
    // 备注
    string note = 6;
    // 有权限的区域
    repeated uint32 area_ids = 7;
    // 有权限的应用
    repeated uint32 app_ids = 8;
    // 有权限的模块
    repeated string modules = 9;
    uint32 login_at = 10;
    string login_ip = 11;
    // 连续失败次数
    uint32 fail_count = 12;
    string access_token = 13;


    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 功能模块
message Module {
    // 模块名称，英文，唯一，前端通过该字段显示或者隐藏功能模块
    string name = 1;
    // 模块中文名称，显示用
    string title = 2;
    // 仅该模块调用的api路径
    repeated string api_paths = 3;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 操作记录
message OpRecord {
    uint64 id = 1;
    uint32 admin_id = 2;
    string email = 3;
    string api_path = 4;
    string desc = 5;
    uint32 spent_ms = 6;
    string ip = 7;
    string request_data = 8;
    string metadata = 9;
    string reply_data = 10;
    string error_data = 11;

    uint32 created_at = 20;
}

// 安装归因信息
message Install {
    uint32 id = 1;
    uint32 app_id = 2;
    string device_id = 3;
    string tracker_token = 4;
    string tracker_name = 5;
    string network = 6;
    string campaign = 7;
    string adgroup = 8;
    string creative = 9;
    string click_label = 10;
    string adid = 11;
    string cost_type = 12;
    float cost_amount = 13;
    string cost_currency = 14;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 工会
message Guild {
    uint32 id = 1;
    // 区域id
    uint32 area_id = 2;
    // 名称
    string name = 3;
    // 邀请码
    string invite_code = 4;
    // 主播数量
    uint32 anchor_count = 5;
    // 是否启用
    bool enable = 6;
    // 备注
    string note = 7;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 应用，每个app端都需要对应一个应用结构
message App {
    uint32 id = 1;
    // 系统类型
    OsType os_type = 2;
    // 应用key
    string app_key = 3;
    // 是否启用
    bool enable = 4;
    // 应用名称
    string title = 5;
    // 是否为主播端
    bool is_anchor = 6;
    // 包名
    string bundle_id = 7;
    // google play CredentialFile，apple store IAP Secret
    string store_cred = 8;
    // api地址
    string api_addr = 9;
    // 备注
    string note = 10;
    // 启用的区域
    repeated uint32 area_ids = 11;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 声网配置
message AgoraConfig {
    // 声网app id
    string app_id = 1;
    // 声网app证书
    string app_cert = 2;
    // REST Api客户id
    string client_id = 3;
    // REST Api客户密匙
    string client_secret = 4;
    // 视频录制时长
    uint32 capture_duration = 5;
    // 视频录制存储配置
    uint32 storage_vendor = 6;
    uint32 storage_region = 7;
    string storage_endpoint = 8;
    string storage_bucket = 9;
    string storage_access_key = 10;
    string storage_secret_key = 11;
}

// 阿里云oss配置
message OssConfig {
    string endpoint = 1;
    string bucket = 2;
    string key_id = 3;
    string key_secret = 4;
}

// 融云配置
message RongcloudConfig {
    // 融云app key
    string app_key = 1;
    // 融云app secret
    string app_secret = 2;
    // 融云api 域名
    string domain = 3;

    // 融云app key
    string old_app_key = 4;
    // 融云app secret
    string old_app_secret = 5;
    // 融云api 域名
    string old_domain = 6;
}

// 鉴黄配置
message GreenConfig {
    string key_id = 1;
    string key_secret = 2;
}

// App区域配置信息，每个app的每个区域一个
message AreaConfig {
    uint32 id = 1;
    // 应用id，为0的时候表示区域全局配置
    uint32 app_id = 2;
    // 区域id，不可为0
    uint32 area_id = 3;
    // 用户和主播积分转换比例
    uint32 convert_rate = 4;
    // 用户充值分成比例，百分位，如果取值为10，表示分成10%
    uint32 deposit_commission = 5;
    // 用户赠送的钻石或积分消费分成比例，百分位，如果取值为10，表示分成10%
    uint32 reward_commission = 6;
    // 默认通话价格
    uint32 call_price = 7;
    // 免费消息数量
    uint32 free_message_count = 8;
    // 新用户奖励钻石数量
    uint32 new_user_reward = 9;
    // 心跳间隔，秒
    uint32 heartbeat_interval = 10;
    // 启用的支付方式
    repeated PayType pay_types = 11;
    // cdn域名
    string cdn = 12;
    // 免打扰时长，秒
    uint32 dnd_period = 13;
    // 标签配置
    repeated string tags = 14;
    // 主播转换usd汇率
    float anchor_exchange_rate = 15;
    // 启用的支付渠道id
    repeated uint32 pay_channel_ids = 16;

    // 声网配置
    AgoraConfig agora_config = 20;
    // 阿里云oss配置
    OssConfig oss_config = 21;
    // 融云配置
    RongcloudConfig rongcloud_config = 22;
    // 鉴黄配置
    GreenConfig green_config = 23;

    // TODO ai policy
    // 仅在服务端发起ai call
    //    bool ai_call_in_server_only = 12;

    uint32 updated_at = 30;
    uint32 created_at = 31;
}

// 支付配置
message PayConfig {
    uint32 id = 1;
    // 区域id
    uint32 area_id = 2;
    // 支付方式
    PayType type = 3;
    // 应用id，payermax使用
    string app_id = 4;
    // 应用密匙，payermax、xendit使用
    string app_secret = 6;
    string redirect_url = 8;
    string callback_url = 10;
    string extra1 = 11;
    string extra2 = 12;
    string extra3 = 13;
    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 应用版本，每个应用可以有多个版本
message Version {
    uint32 id = 1;
    // 应用id
    uint32 app_id = 2;
    // 系统类型
    OsType os_type = 3;
    // 版本号
    uint32 code = 4;
    // 版本名称，如1.0.1，内部判断是否需要升级等都是用code
    string name = 5;
    // 是否启用
    bool enable = 6;
    // 是否审核中
    bool in_review = 7;
    // 备注
    string note = 8;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

// 本地化
message Localization {
    // 语言类型
    string lang = 1;
    // 本地语言内容
    string content = 2;
}

// 升级配置
message Upgrade {
    uint32 id = 1;
    // 应用id
    uint32 app_id = 2;
    // 是否启用
    bool enable = 3;
    // 升级的系统类型
    OsType os_type = 4;
    // 最低版本号，低于该版本号的需要升级
    uint32 min_version = 5;
    // 升级名称，仅供内部是用
    string title = 6;
    // 提示升级
    bool show_upgrade = 7;
    // 强制升级
    bool force_upgrade = 8;
    // 升级包地址
    string upgrade_url = 9;
    // 升级提示信息，多语言配置，后台使用
    repeated Localization upgrade_tips = 10;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

enum MessageType {
    MessageTypeUnknown = 0;
    // 文本
    MessageText = 1;
    // 礼物
    MessageGift = 2;
    // 充值
    MessageDeposit = 3;
    // 图片
    MessageImage = 4;
    // 视频
    MessageVideo = 5;
    // 语音
    MessageAudio = 6;
    // 位置
    MessageLocation = 7;
    // 虚拟视频
    MessageVirtual = 8;
    //    // 通话
    //    MessageCall = 9;
    //    // 通话结束
    //    MessageHang = 10;
}

enum MessageDirection {
    DirectionUnknown = 0;
    ToUser = 1;
    ToAnchor = 2;
}

/*

	AIBMissCall = 1
	AIBFollow = 2
	AIBRecharge = 3
	AIBSendGift = 4
*/

enum ActionType {
    ActionTypeUnknown = 0;
    // 拒绝接听
    ActionRefuseCall = 1;
    // 未接听
    ActionMissCall = 2;
    // 通话结束
    ActionEndCall = 3;
    // 关注
    ActionFollow = 4;
    // 充值
    ActionDeposit = 5;
    // 发送礼物
    ActionSendGift = 6;
}

message RobotMessage {
    uint32 id = 1;
    uint32 area_id = 2;
    // 机器人主播id
    uint32 anchor_id = 3;
    // 是否启用
    bool enable = 4;
    // 消息类型
    MessageType type = 5;
    // 消息内容
    string text = 6;
    // 图片、视频、语音消息链接
    string uri = 7;
    // 缩略图
    string thumb = 8;
    // 语音或视频消息时长
    uint32 duration = 9;
    // 顺序
    uint32 sort = 10;
    // 间隔时间
    uint32 interval = 11;
    // 动作类型
    ActionType action = 12;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

message AutoMessage {
    uint32 id = 1;
    uint32 area_id = 2;
    // 是否启用
    bool enable = 3;
    // 动作类型
    ActionType action = 4;
    // 消息类型
    MessageType type = 5;
    // 消息内容
    string text = 6;
    // 图片、视频、语音消息链接
    string uri = 7;
    // 缩略图
    string thumb = 8;
    // 语音或视频消息时长
    uint32 duration = 9;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

message ChatMessage {
    uint64 id = 1;
    uint32 area_id = 2;
    uint32 app_id = 3;
    // 用户id
    uint32 user_id = 4;
    // 主播id
    uint32 anchor_id = 5;
    // 消息类型
    MessageType type = 6;
    // 消息方向
    MessageDirection direction = 7;
    // 消息内容
    string text = 8;
    // 图片、视频、语音消息链接
    string uri = 9;
    // 缩略图
    string thumb = 10;
    // 语音或视频消息时长
    uint32 duration = 11;
    // 消息发送时间
    uint32 send_at = 12;

    uint32 created_at = 21;
}

// 调整记录，奖惩记录
message AdjustRecord {
    uint64 id = 1;
    // 应用id
    uint32 app_id = 2;
    // 区域id
    uint32 area_id = 3;
    // 操作的管理员id
    uint32 admin_id = 4;
    // 实体类型，用户或主播
    EntityType entity_type = 5;
    // 实体id
    uint32 entity_id = 6;
    // 金额，正数为奖励，负数为处罚
    int32 amount = 7;
    // 罚款理由
    string reason = 8;

    uint32 updated_at = 20;
    uint32 created_at = 21;
}

enum StatInterval {
    StatIntervalUnknown = 0;
    // 每分钟
    StatMin = 1;
    // 每5分钟
    StatMin5 = 2;
    // 每小时
    StatHourly = 3;
    // 每天
    StatDaily = 4;
    // 每周
    StatWeekly = 5;
}

// 区域统计数据
message AreaStat {
    uint64 id = 1;
    uint32 area_id = 2;
    // 起始时间
    uint32 start_at = 3;
    // 统计间隔
    StatInterval interval = 4;
    // 统计时间
    uint32 stat_at = 5;
    // 活跃用户数量
    uint32 active_user = 6;
    // 在线用户数量
    uint32 online_user = 7;
    // 新用户数量
    uint32 new_user = 8;
    // 付费用户数量
    uint32 pay_user = 9;
    // 活跃主播数量
    uint32 active_anchor = 10;
    // 空闲主播数量
    uint32 idle_anchor = 11;
    // 通话主播数量
    uint32 busy_anchor = 12;
    // AI发起进行中通话数量
    uint32 ai_calling = 13;
    // 用户发起进行中通话数量
    uint32 user_calling = 14;
    // 主播发起进行中通话数量
    uint32 anchor_calling = 15;
    // AI通话发起数量
    uint32 ai_call = 16;
    // 用户通话发起数量
    uint32 user_call = 17;
    // 主播通话发起数量
    uint32 anchor_call = 18;
    // 用户接听数量
    uint32 user_answer = 19;
    // 主播接听数量
    uint32 anchor_answer = 20;
    // 充值钻石数量
    uint64 deposit = 21;
    // 消耗钻石数量
    uint64 expense = 22;
    // 收入
    uint32 income = 23;
    // google支付金额
    uint32 google_pay = 24;
    // apple支付金额
    uint32 apple_pay = 25;
    // 三方支付金额
    uint32 other_pay = 26;

    uint32 updated_at = 30;
    uint32 created_at = 31;
}

// 主播统计数据
message AnchorStat {
    uint64 id = 1;
    uint32 area_id = 2;
    uint32 anchor_id = 3;
    // 起始时间
    uint32 start_at = 4;
    // 统计间隔
    StatInterval interval = 5;
    // 统计时间
    uint32 stat_at = 6;
    // 在线时长
    uint32 online_duration = 7;
    // 来电数
    uint32 in_call = 8;
    // 呼出数
    uint32 out_call = 9;
    // 接听数
    uint32 answer = 10;
    // 通话时间30s以上数量
    uint32 answer_30 = 11;
    // 通话时间50s以上数量
    uint32 answer_50 = 12;
    // 通话时长
    uint32 duration = 13;
    // 通话收入
    uint32 call_income = 14;
    // 礼物收入
    uint32 gift_income = 15;
    // 用户充值分成
    uint32 commission_income = 16;
    // 奖惩收入
    int32 adjust_income = 17;
    // 消耗贡献
    uint32 expense = 18;
    // 充值贡献
    uint32 income = 19;

    uint32 updated_at = 30;
    uint32 created_at = 31;
}

// 用户统计数据
message UserStat {
    uint64 id = 1;
    // 区域id
    uint32 area_id = 2;
    // 应用id
    uint32 app_id = 3;
    // 起始时间
    uint32 start_at = 4;
    // 统计间隔
    StatInterval interval = 5;
    // 统计时间
    uint32 stat_at = 6;
    // 总收入，单位为分
    uint32 income = 7;
    // 活跃用户
    uint32 active_user = 8;
    // 新增用户
    uint32 new_user = 9;
    // 充值用户数量
    uint32 pay_user = 10;
    // VIP购买数量
    float vip_user = 11;
    // 复购用户数量
    uint32 repay_user = 12;
    // 新用户收入
    uint32 new_income = 13;
    // 新用户充值数量
    uint32 new_pay_user = 14;
    // 通过话的新用户数量，免费钻石消耗人数
    uint32 new_call_user = 15;
    // 聊过天的新用户数量，免费消息消耗完人数
    uint32 new_chat_user = 16;
    // 通话数量
    uint32 call = 17;
    // 接通数量
    uint32 answer = 18;
    // 通话时长
    uint64 duration = 19;
    // AI通话数量
    uint32 ai_call = 20;
    // AI接通数量
    uint32 ai_answer = 21;
    // AI通话时长
    uint64 ai_duration = 22;
    // 总用户消耗
    uint64 expense = 23;
    // 新用户消耗
    uint64 new_expense = 24;
    // google支付订单数
    uint32 google_pay = 25;
    // apple支付订单数
    uint32 apple_pay = 26;
    // 三方支付订单数
    uint32 other_pay = 27;

    uint32 updated_at = 40;
    uint32 created_at = 41;
}